[tool.poetry]
authors = ["Hju Kneyck Flores <hjucode@gmail.com>"]
description = ""
name = "app"
version = "0.1.0"

[tool.poetry.dependencies]
fastapi = "^0.85.1"
python = "^3.10"
uvicorn = {extras = ["standard"], version = "^0.18.3"}
sqlmodel = "^0.0.8"
pydantic = {extras = ["email"], version = "^1.10.2"}
psycopg2-binary = "^2.9.4"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
